--- a/.github/workflows/update-parent.yml
+++ b/.github/workflows/update-parent.yml
@@ -17,6 +17,10 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
 
 
+      - name: Initialize and update submodules
+      run: |
+          git submodule init
+          git submodule update
       - name: Clone parent repo
         run: |
           git submodule update --remote --merge --allow-unrelated-histories
