--- a/.github/workflows/update-parent.yml
+++ b/.github/workflows/update-parent.yml
@@ -1,4 +1,4 @@
-name: Update Parent Repo from Submodules
+- name: Checkout parent repositoryname: Update Parent Repo from Submodules
 
 on:
   # Trigger when parent repo is pushed to main
@@ -7,12 +7,20 @@ on:
       - main
   # Trigger via repository_dispatch from submodules
   repository_dispatch:
-    types: [submodule-updated]
+    types: 
+      - submodule-updated
+      - update-submodules
   # Allow manual triggering
   workflow_dispatch:
-  # Optional: run on a schedule to catch any missed updates
-  schedule:
-    - cron: '0 */6 * * *'  # Every 6 hours
+    inputs:
+      force_update:
+        description: 'Force update all submodules'
+        required: false
+        default: 'false'
+        type: boolean
+  # # Run on a schedule to check for submodule updates
+  # schedule:
+  #   - cron: '*/15 * * * *'  # Every 15 minutes
 
 permissions:
   contents: write
@@ -22,7 +30,26 @@ jobs:
   update-submodules:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout parent repository
+      - name: Debug trigger information
+        run: |
+          echo "=== Workflow Debug Information ==="
+          echo "Triggered by: ${{ github.event_name }}"
+          echo "Repository: ${{ github.repository }}"
+          echo "Actor: ${{ github.actor }}"
+          echo "SHA: ${{ github.sha }}"
+          echo "Ref: ${{ github.ref }}"
+          
+          if [ "${{ github.event_name }}" = "repository_dispatch" ]; then
+            echo "=== Repository Dispatch Payload ==="
+            echo "Event type: ${{ github.event.action }}"
+            echo "Client payload: ${{ toJson(github.event.client_payload) }}"
+          fi
+          
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "=== Manual Trigger ==="
+            echo "Force update: ${{ github.event.inputs.force_update }}"
+          fi
+          echo "=================================="
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
